= v1.3.0

* Updated the README.
* Switched to Bundler for building/packing of gem.
* Fixed stack dump when obtaining git config app information.
* Added soft version requirements for Ruby 1.8.7.
* Added soft version requirements for Heroku 1.0.0.
* Renamed the "herokup" command to "hp".
* Renamed the settings.yml file to heroku_plus.yml.
* Renamed the "ssh_identity" key to "ssh_id" in the heroku_plus.yml file.
* Added the "current_mode" key to the heroku_plus.yml file. Defaults to "stage".

= v1.1.0

* Improved error messaging for files that do not exist.
* Clarified the difference between the error messages displayed when switching SSH identities versus switching Heroku account credentials.
* Clarified source and README documentation.
* Renamed the -a option to -i (i.e. info) instead.
* Added printing of SSH private and public identity paths (to further clarify what is being used) when using the the -i option.
* Prominently display the current account when displaying all account information via the -i option.
* Added the -b option so one can easily backup an existing Heroku credentials and SSH identity.
* Added the -d option so one can easily destroy an existing Heroku account (i.e. credentials and SSH identity)
* Added the -l option so one can easily list all existing Heroku accounts.
* Removed the ability to configure the Heroku credentials file name via the settings.yml since you can't configure this via the Heroku gem anyway.

= v1.0.0

* Initial version.