@@ -1,3 +1,13 @@
+= vx.x.x (master)
+
+* Fixed bug with not being able to wrap complex commands in quotes for passing to Heroku (i.e. -p).
+* Added the -c, --console option for opening the remote console.
+* Added the -r, --restart option for restarting the remote server.
+* Added the -M, --mode option for changing mode of current app.
+* Renamed the -b option to -B.
+* Renamed the -d option to -D.
+* Renamed the key "current_mode" to "mode" for the heroku_plus.yml settings file.
+
 = v1.3.0
 
 * Updated the README.
